Initial content: index, maps, and search pages

--- a/search.html
+++ b/search.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Introduction to APIs</title>
+    <title>Google Custom Search API</title>
   </head>
 
   <body>
@@ -18,18 +18,13 @@
       <div class="inner">
 
         <header>
-          <h1>Introduction to APIs</h1>
-          <h2>Sample pages for playing with APIs</h2>
+          <h1>Google Custom Search API</h1>
+          <h2>Build a site-specific search engine</h2>
         </header>
 
         <hr>
 
         <section id="main_content">
-          <h3><a href="search.html" title="Google Custom Search API">Google Custom Search API</a></h3>
-          <p>Build a site-specific search engine</p>
-
-          <h3><a href="maps.html" title="Google Maps API">Google Maps API</a></h3>
-          <p>Put a map on it.</p>
         </section>
       </div>
     </div>
